--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -10,7 +10,7 @@
     <div class="col-lg-2">Nature</div>
     <div class="col-lg-2">Days</div>
     <div class="col-lg-1">Rate</div>
-    <div class="col-lg-3">Actions</div>
+    <div class="col-lg-3"></div>
   </div>
   <div *ngFor="let i of invoice.items; let idx = index" class="row add-items table-items">
       <div class="col-lg-2">{{i.project}}</div>
