--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -14,7 +14,7 @@
           <div class="col-lg-3">Firsname</div>
           <div class="col-lg-3">Lastname</div>
           <div class="col-lg-3">VAT</div>
-          <div class="col-lg-3">Actions</div>
+          <div class="col-lg-3"></div>
         </div>
         <div *ngFor="let i of profiles; let idx = index" class="row add-items table-items">
             <div class="col-lg-3">{{i.firstname}}</div>
