--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -53,8 +53,10 @@
           <span aria-hidden="true">&times;</span>
         </button>
     </div>
+    
     <div class="col-lg-12 row">
-      <div class="col-lg-6 row invoicer-edit">
+      {{currentProfile.firstname}}, {{currentProfile.lastname}}
+     <!-- <div class="col-lg-6 row invoicer-edit">
         
         <div class="col-lg-12">
           <label for="invoice_title">Name</label>
@@ -106,7 +108,7 @@
             <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.cust_postcode" placeholder="1000">
           </div>
 
-      </div>
+      </div>-->
     </div>
     <div class="modal-footer col-lg-12">
       <button  (click)="save()" type="button" class="btn btn-outline-secondary  new-invoice">Save invoice</button>
