--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -61,10 +61,15 @@
         <div class="col-lg-12"><p>{{currentProfile.address.street}}, {{currentProfile.address.streetNumber}}</p></div>
         <div class="col-lg-12"><p>{{currentProfile.address.city}} {{currentProfile.address.postcode}}, {{currentProfile.address.country}}</p></div>
       </div>
-      <div>
-      <select>
-        <option *ngFor="let i of profiles">{{i.firstname}}</option>
-      </select>
+      <div class="col-lg-6">
+        <table>
+        <tbody>
+        <tr *ngFor="let i of profiles" class="">
+          <td>{{i.firstname}}</td>
+          <td>{{i.vat}}</td>
+        </tr>
+        </tbody>
+        </table>
       </div>
      <!-- <div class="col-lg-6 row invoicer-edit">
         
