--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -4,7 +4,7 @@
     Items
   </h5>
   <div class="container-table-items col-lg-12">
-  <div class="row new-items table-header {{invoice.items.length>0?'':'hide'}}">
+  <div class="row new-items table-header {{invoice.items.length>0?'':'hide'}}" style="background-color: #b0fdd9">
     <div class="col-lg-2">Project</div>
     <div class="col-lg-2">Period</div>
     <div class="col-lg-2">Nature</div>
