--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -18,7 +18,7 @@
             <div *ngFor="let i of history; let idx = index" class="row add-items table-items">
               <div class="col-lg-3">{{i.id}}</div>
               <div class="col-lg-3">{{i.date}}</div>
-              <div class="col-lg-3">{{i.cust_name}}</div>
+              <div class="col-lg-3">{{i.invoicer.firstname}}</div>
               <div class="col-lg-3">
                 <fa-icon [icon]="faFolderOpen" class="btn btn-warning" (click)="openInvoice(i)"></fa-icon>&nbsp;
                 <fa-icon [icon]="faEye" class="btn btn-warning" (click)="openModal(content, i)"></fa-icon>&nbsp;
@@ -30,7 +30,7 @@
         </div>
         &nbsp;
         <div class="col-lg-12">
-          <app-item-list [invoice]="invoice" *ngIf="invoice"></app-item-list>
+          <app-item-list [invoice]="current" *ngIf="current"></app-item-list>
         </div>
       </div>
     </div>
