--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -10,16 +10,18 @@
         <div class="col-lg-12">
           <div class="container-table-items col-lg-12">
             <div class="row new-items table-header">
-              <div class="col-lg-3">#</div>
+              <div class="col-lg-1">#</div>
               <div class="col-lg-3">Period</div>
               <div class="col-lg-3">Customer</div>
-              <div class="col-lg-3"></div>
+              <div class="col-lg-3">vat</div>
+              <div class="col-lg-2"></div>
             </div>
             <div *ngFor="let i of history; let idx = index" class="row add-items table-items">
-              <div class="col-lg-3">{{i.id}}</div>
+              <div class="col-lg-1">{{idx}}</div>
               <div class="col-lg-3">{{i.date}}</div>
-              <div class="col-lg-3">{{i.invoicer.firstname}}</div>
-              <div class="col-lg-3">
+              <div class="col-lg-3">{{i.invoiced.firstname}}</div>
+              <div class="col-lg-3">{{i.invoiced.vat}}</div>
+              <div class="col-lg-2">
                 <fa-icon [icon]="faFolderOpen" class="btn btn-warning" (click)="openInvoice(i)"></fa-icon>&nbsp;
                 <fa-icon [icon]="faEye" class="btn btn-warning" (click)="openModal(content, i)"></fa-icon>&nbsp;
                 <fa-icon [icon]="faFileDownload" class="btn btn-warning" (click)="generatePdf(i)"></fa-icon>&nbsp;
@@ -57,77 +59,35 @@
     </div>
     
     <div class="col-lg-12 row">
+
       <div class="col-lg-6">
         <div class="col-lg-12"><p>{{currentProfile.firstname}}, {{currentProfile.lastname}}</p></div>
         <div class="col-lg-12"><p>{{currentProfile.vat}}</p></div>
         <div class="col-lg-12"><p>{{currentProfile.address.street}}, {{currentProfile.address.streetNumber}}</p></div>
         <div class="col-lg-12"><p>{{currentProfile.address.city}} {{currentProfile.address.postcode}}, {{currentProfile.address.country}}</p></div>
       </div>
-      <div class="col-lg-6">
+
+      <div class="col-lg-6" *ngIf="currentCustomer">
+          <div class="col-lg-12"><p>{{currentCustomer.firstname}}, {{currentCustomer.lastname}}</p></div>
+          <div class="col-lg-12"><p>{{currentCustomer.vat}}</p></div>
+          <div class="col-lg-12"><p>{{currentCustomer.address.street}}, {{currentCustomer.address.streetNumber}}</p></div>
+          <div class="col-lg-12"><p>{{currentCustomer.address.city}} {{currentCustomer.address.postcode}}, {{currentCustomer.address.country}}</p></div>
+      </div>
+
+      <div class="col-lg-12">
         <table>
         <tbody>
-        <tr *ngFor="let i of profiles" class="">
+        <tr><td colspan="3"><input type="text" (keyup)="searchProfiles($event)" class="col-lg-11"><fa-icon [icon]="faSearch"></fa-icon></td></tr>
+        <tr *ngFor="let i of profilesFound" class="new-invoice-profiles" (click)="selectCustomer(i)">
           <td>{{i.firstname}}</td>
+          <td>{{i.lastname}}</td>
           <td>{{i.vat}}</td>
         </tr>
         </tbody>
         </table>
       </div>
-     <!-- <div class="col-lg-6 row invoicer-edit">
-        
-        <div class="col-lg-12">
-          <label for="invoice_title">Name</label>
-          <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.name" placeholder="me">
-        </div>
-        
-        <div class="col-lg-12">
-          <label for="invoice_title">VAT</label>
-          <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.vat" placeholder="BE123456789">
-        </div>
-        
-        <div class="col-lg-6">
-          <label for="invoice_title">Street</label>
-          <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.street" placeholder="Rue du milieu, 6">
-        </div>
-        
-        <div class="col-lg-6">
-          <label for="invoice_title">City</label>
-          <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class=""  [(ngModel)]="invoice.city" placeholder="Bruxelles">
-        </div>
-        
-        <div class="col-lg-12">
-          <label for="invoice_title">Postcode</label>
-          <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class=""  [(ngModel)]="invoice.postcode" placeholder="1000">
-        </div>
-
-      </div>
-      <div class="col-lg-6 row invoiced-edit">
-          <div class="col-lg-12">
-            <label for="invoice_title">Customer</label>
-            <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.cust_name" placeholder="customer">
-          </div>
-          <div class="col-lg-12">
-            <label for="invoice_title">VAT</label>
-            <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.cust_vat" placeholder="BE123456789">
-          </div>
-          <div class="col-lg-6">
-            <label for="invoice_title">Street</label>
-            <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.cust_street" placeholder="Rue du milieu, 6">
-          </div>
-          
-          <div class="col-lg-6">
-            <label for="invoice_title">City</label>
-            <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.cust_city" placeholder="Bruxelles">
-          </div>
-
-          <div class="col-lg-12">
-            <label for="invoice_title">Postcode</label>
-            <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-"  [(ngModel)]="invoice.cust_postcode" placeholder="1000">
-          </div>
-
-      </div>-->
     </div>
     <div class="modal-footer col-lg-12">
-      <button  (click)="save()" type="button" class="btn btn-outline-secondary  new-invoice">Save invoice</button>
+      <button  (click)="save()" type="button" class="btn btn-outline-secondary  new-invoice">Create invoice</button>
     </div>
 </ng-template>
