--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -60,22 +60,28 @@
     
     <div class="col-lg-12 row">
 
-      <div class="col-lg-6">
-        <div class="col-lg-12"><p>{{currentProfile.firstname}}, {{currentProfile.lastname}}</p></div>
-        <div class="col-lg-12"><p>{{currentProfile.vat}}</p></div>
-        <div class="col-lg-12"><p>{{currentProfile.address.street}}, {{currentProfile.address.streetNumber}}</p></div>
-        <div class="col-lg-12"><p>{{currentProfile.address.city}} {{currentProfile.address.postcode}}, {{currentProfile.address.country}}</p></div>
+      <div class="col-lg-6 current-profile">
+        <h5>My current profile</h5>
+        <div>
+        <p>{{currentProfile.firstname}}, {{currentProfile.lastname}}</p>
+        <p>{{currentProfile.vat}}</p>
+        <p>{{currentProfile.address.street}}, {{currentProfile.address.streetNumber}}</p>
+        <p>{{currentProfile.address.city}} {{currentProfile.address.postcode}}, {{currentProfile.address.country}}</p>
+        </div>
       </div>
 
-      <div class="col-lg-6" *ngIf="currentCustomer">
-          <div class="col-lg-12"><p>{{currentCustomer.firstname}}, {{currentCustomer.lastname}}</p></div>
-          <div class="col-lg-12"><p>{{currentCustomer.vat}}</p></div>
-          <div class="col-lg-12"><p>{{currentCustomer.address.street}}, {{currentCustomer.address.streetNumber}}</p></div>
-          <div class="col-lg-12"><p>{{currentCustomer.address.city}} {{currentCustomer.address.postcode}}, {{currentCustomer.address.country}}</p></div>
+      <div class="col-lg-6 customer-profile" *ngIf="currentCustomer">
+          <h5>Customer to invoice</h5>
+          <div>
+            <p>{{currentCustomer.firstname}}, {{currentCustomer.lastname}}</p>
+            <p>{{currentCustomer.vat}}</p>
+            <p>{{currentCustomer.address.street}}, {{currentCustomer.address.streetNumber}}</p>
+            <p>{{currentCustomer.address.city}} {{currentCustomer.address.postcode}}, {{currentCustomer.address.country}}</p>
+          </div>
       </div>
 
       <div class="col-lg-12">
-        <table>
+        <table class="col-lg-12">
         <tbody>
         <tr><td colspan="3"><input type="text" (keyup)="searchProfiles($event)" class="col-lg-11"><fa-icon [icon]="faSearch"></fa-icon></td></tr>
         <tr *ngFor="let i of profilesFound" class="new-invoice-profiles" (click)="selectCustomer(i)">
