--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -18,7 +18,7 @@
             </div>
             <div *ngFor="let i of history; let idx = index" class="row add-items table-items">
               <div class="col-lg-1">{{idx}}</div>
-              <div class="col-lg-3">{{i.date}}</div>
+              <!--<div class="col-lg-3">{{i.date}}</div>-->
               <div class="col-lg-3">{{i.invoiced.firstname}}</div>
               <div class="col-lg-3">{{i.invoiced.vat}}</div>
               <div class="col-lg-2">
