--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -20,20 +20,30 @@
     padding: 10px;
 }
 .current-profile > div, .customer-profile > div {
-    
-    border: solid 1px #575757;
-    border-radius: 0px 5px 5px 0px;
-    background-color: #ed9f3d;
-    color: #2a2a2a;
-    padding: 15px;
-    margin-bottom: 15px;    
-    /*box-shadow: 1px 1px 4px 1px #b7b7b7;*/
+    margin-bottom: 15px;
 }
-.current-profile > div > p, .customer-profile > div > p{
+.current-profile {
+    text-align: right;
+    border-right: solid 1px #ededed;
+}
+.current-profile > div > p, .customer-profile > div > p {
+    
+        /* border: solid 1px #e9e9e9; */
+    /* background-color: #ededed; */
+    color: #8a8a8a;
+    padding: 5px;
+    margin-bottom: 15px;
     margin-bottom: 1px;
 }
 
 .customer-profile > div {
-    background-color: #3ded8c;    
+   /* background-color: #3ded8c;    */
     border-radius: 5px 0px 0px 5px ;
+}
+.search > input {
+    margin-right: 15px;
+    margin-top: 15px;
+}
+.modal-header {
+    margin-bottom: 15px;
 }
