new module settings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
             <li><fa-icon [icon]="faHistory"></fa-icon> History</li>
             <li routerLink="/invoice" routerLinkActive="active"><fa-icon [icon]="faFileInvoice"></fa-icon> Invoices</li>
             <li routerLink="/invoiceprofile" routerLinkActive="active"><fa-icon [icon]="faProfile"></fa-icon>Profiles</li>
+            <li routerLink="/settings" routerLinkActive="active"><fa-icon [icon]="faCogs"></fa-icon>Settings</li>
         </ul>
         <hr class="recent-hr"/>
         <ul class="recent">
