new module settings

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,4 +1,18 @@
 <div class="col-lg-12">
   <h5><fa-icon [icon]="faCogs" class="header-icon"></fa-icon> Settings</h5>
 
+  <div class="col-lg-12 row">
+    <h3>Invoice Setting</h3>
+
+    <div class="col-lg-12">
+      <label for="logo">Change your logo</label>
+      <input id="logo" type="file">
+    </div>
+
+    <div class="col-lg-12">
+      <label for="pdfname">Name for pdf</label>
+      <input id="pdfname" type="text">
+    </div>
+  </div>
+
 </div>
