--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -69,3 +69,12 @@ ul.recent>li:hover {
 .routerContent {
     margin-top: 25px;
 }
+/*
+.sidebar > ul > li > fa-icon {
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    border-radius: 20px;
+    border-color: #dfa9b5;
+    background-color: #ffd2d2;
+}*/
