--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,8 @@
         <ul>
             <li><fa-icon [icon]="faHome"></fa-icon> Menu</li>
             <li><fa-icon [icon]="faHistory"></fa-icon> History</li>
-            <li routerLink="/invoice" routerLinkActive="active"><fa-icon [icon]="faFileInvoice"></fa-icon> Invoices</li>
-            <li routerLink="/invoiceprofile" routerLinkActive="active"><fa-icon [icon]="faProfile"></fa-icon>Profiles</li>
-            <li routerLink="/settings" routerLinkActive="active"><fa-icon [icon]="faCogs"></fa-icon>Settings</li>
+
+            <li  *ngFor="let m of menu" routerLink="{{m.route}}" routerLinkActive="{{m.active}}" [ngStyle]="{'color': m.selected ? m.color:''}" (click)="click();m.selected=true"><fa-icon [icon]="m.icon" [ngStyle]="{color: m.color}"></fa-icon>{{m.label}}</li>
         </ul>
         <hr class="recent-hr"/>
         <ul class="recent">
