--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -6,7 +6,10 @@
 
     <div class="col-lg-12">
       <label for="logo">Change your logo</label>
-      <input id="logo" type="file">
+      <input id="logo" type="file" style="display: none">
+      <svg width="100" height="100" style="background-color: rgb(196, 196, 196);border:dashed 2px rgb(143, 143, 143);" for="logo">
+          <text x="15" y="55" fill="#EDEDED" style="font-weight: bold">Your logo</text>
+      </svg>
     </div>
 
     <div class="col-lg-12">
