--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -65,6 +65,7 @@
         <div>
         <p>{{currentProfile.firstname}}, {{currentProfile.lastname}}</p>
         <p>{{currentProfile.vat}}</p>
+        <p>{{currentProfile.accountNumber}}</p>
         <p>{{currentProfile.address.street}}, {{currentProfile.address.streetNumber}}</p>
         <p>{{currentProfile.address.city}} {{currentProfile.address.postcode}}, {{currentProfile.address.country}}</p>
         </div>
@@ -75,6 +76,7 @@
           <div>
             <p>{{currentCustomer.firstname}}, {{currentCustomer.lastname}}</p>
             <p>{{currentCustomer.vat}}</p>
+            <p>{{currentProfile.accountNumber}}</p>
             <p>{{currentCustomer.address.street}}, {{currentCustomer.address.streetNumber}}</p>
             <p>{{currentCustomer.address.city}} {{currentCustomer.address.postcode}}, {{currentCustomer.address.country}}</p>
           </div>
