--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -46,6 +46,7 @@
           <div class="col-lg-12"><label>Firsname </label><input type="text" [(ngModel)]="newInvoiceProfile.firstname"></div>
           <div class="col-lg-12"><label>Lastname </label><input type="text" [(ngModel)]="newInvoiceProfile.lastname"></div>
           <div class="col-lg-12"><label>VAT </label><input type="text" [(ngModel)]="newInvoiceProfile.vat"></div>
+          <div class="col-lg-12"><label>Account N° </label><input type="text" [(ngModel)]="newInvoiceProfile.accountNumber"></div>
           <div class="col-lg-12"><label>active profile?</label><input type="checkbox" [(ngModel)]="newInvoiceProfile.active"></div>
           <div class="col-lg-12"><label>customer?</label><input type="checkbox" [(ngModel)]="newInvoiceProfile.customer"></div>
         </fieldset>
@@ -82,8 +83,14 @@
           <div class="col-lg-12"><label>Firsname </label><input type="text" [(ngModel)]="currentProfile.firstname"></div>
           <div class="col-lg-12"><label>Lastname </label><input type="text" [(ngModel)]="currentProfile.lastname"></div>
           <div class="col-lg-12"><label>VAT </label><input type="text" [(ngModel)]="currentProfile.vat"></div>
-          <div class="col-lg-12"><label>active profile?</label><input type="checkbox" [(ngModel)]="currentProfile.active"></div>
-          <div class="col-lg-12"><label>customer profile?</label><input type="checkbox" [(ngModel)]="currentProfile.customer"></div>
+          <div class="col-lg-12"><label>Account N° </label><input type="text" [(ngModel)]="currentProfile.accountNumber"></div>
+          <div class="col-lg-12 form-check-inline">
+            <input class="form-check-input" id="activeProfile" type="checkbox" [(ngModel)]="currentProfile.active">
+            <label class="form-check-label" for="activeProfile">active profile?</label>
+            <input class="form-check-input" id="isCustomer" type="checkbox" [(ngModel)]="currentProfile.customer">
+            <label class="form-check-label" for="isCustomer">customer profile?</label>
+          </div>
+
         </fieldset>
       </div>
       <div class="col-lg-6">
