--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -62,6 +62,28 @@
           <div class="col-lg-12"><label>Country </label><input type="text" [(ngModel)]="newInvoiceProfile.address.country"></div>
         </fieldset>
       </div>
+      <div class="col-lg-6">
+        <fieldset>
+          <legend>Logo</legend>
+          <div class="col-lg-12 row">
+            <div  *ngIf="!logo" class="col-lg-6">
+              <svg width="100" height="100" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
+                  <text x="14" y="50" fill="#999" style="font-weight: bold">Your logo</text>
+              </svg>
+            </div>
+            <div *ngIf="logo" class="col-lg-6">
+              <img *ngIf="newInvoiceProfile.logo" [src]="newInvoiceProfile.logo" width="100%" height="100%"/>
+            </div>
+            <div class="col-lg-6">
+              <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
+              <div *ngIf="loadingLogo" class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <input id="logo" type="file" style="display:none" (change)="changeLogo($event,newInvoiceProfile)">
+        </fieldset>
+      </div>
     </div>
     <div class="modal-footer col-lg-12">
         <button  (click)="save(newInvoiceProfile)" type="button" class="btn btn-outline-secondary  new-invoice">Save profile</button>
@@ -102,6 +124,28 @@
           <div class="col-lg-12"><label>City </label><input type="text" [(ngModel)]="currentProfile.address.city"></div>
           <div class="col-lg-12"><label>Postcode </label><input type="text" [(ngModel)]="currentProfile.address.postcode"></div>
           <div class="col-lg-12"><label>Country </label><input type="text" [(ngModel)]="currentProfile.address.country"></div>
+        </fieldset>
+      </div>
+      <div class="col-lg-6">
+        <fieldset>
+          <legend>Logo</legend>
+          <div class="col-lg-12 row">
+            <div *ngIf="!currentProfile.logo" class="col-lg-6">
+              <svg width="100" height="100" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
+                  <text x="14" y="50" fill="#999" style="font-weight: bold">Your logo</text>
+              </svg>
+            </div>
+            <div *ngIf="currentProfile.logo" class="col-lg-6">
+              <img *ngIf="currentProfile.logo" [src]="currentProfile.logo" width="100%" height="100%"/>
+            </div>
+            <div class="col-lg-6">
+              <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
+              <div *ngIf="loadingLogo" class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <input id="logo" type="file" style="display:none" (change)="changeLogo($event,currentProfile)">
         </fieldset>
       </div>
     </div>
