--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -66,12 +66,12 @@
         <fieldset>
           <legend>Logo</legend>
           <div class="col-lg-12 row">
-            <div  *ngIf="!logo" class="col-lg-6">
+            <div  *ngIf="!newInvoiceProfile.logo" class="col-lg-6">
               <svg width="100" height="100" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
                   <text x="14" y="50" fill="#999" style="font-weight: bold">Your logo</text>
               </svg>
             </div>
-            <div *ngIf="logo" class="col-lg-6">
+            <div *ngIf="newInvoiceProfile.logo" class="col-lg-6">
               <img *ngIf="newInvoiceProfile.logo" [src]="newInvoiceProfile.logo" width="100%" height="100%"/>
             </div>
             <div class="col-lg-6">
