--- a/src/app/invoice-preview/invoice-preview.component.html
+++ b/src/app/invoice-preview/invoice-preview.component.html
@@ -97,6 +97,6 @@
     <label>{{invoice.invoicer.address.street}}</label><br/>
     <label>{{invoice.invoicer.address.postcode}}, {{invoice.invoicer.address.city}}</label><br/>
     </p>
-    <p>if you have any question concerning this invoice, contact <b>02/12.456.789</b> or {{invoice.invoicer.mail}}</p>
+    <p>if you have any question concerning this invoice, contact <b>{{invoice.invoicer.phoneNumber}}</b> or {{invoice.invoicer.mail}}</p>
   </div>
 </div>
