--- a/src/app/invoice-preview/invoice-preview.component.html
+++ b/src/app/invoice-preview/invoice-preview.component.html
@@ -1,7 +1,7 @@
 <div class="container col-lg-12 invoice-view" id="invoice">
   <a (click)="captureScreen()">cature</a>
 <div class="invoice-header col-lg-12 row">
-  <div class="logo col-lg-10"><img src="./assets/img/logo.png" height="75px" width="75px"/></div>
+  <div class="logo col-lg-10"><img [src]="invoice.invoicer.logo" height="75px" width="75px"/></div>
   <div class="label col-lg-2"><label>INVOICE</label></div>
   <div class="to col-lg-10 bill-to">
     <p>
