--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -28,7 +28,7 @@
                   <div ngbDropdownMenu aria-labelledby="dropdown" class="dropdown-menu">
                     <div (click)="openInvoice(i)"><fa-icon [icon]="faFolderOpen"></fa-icon> Open</div>
                     <div (click)="openModal(content, i)"><fa-icon [icon]="faEye"></fa-icon> Preview</div>
-                    <div (click)="generatePdf(i)"><fa-icon [icon]="faFileDownload"></fa-icon> Items</div>
+                    <div (click)="generatePdf(i)"><fa-icon [icon]="faFilePdf"></fa-icon> Download PDF</div>
                     <div (click)="deleteInvoice(i)"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
                   </div>
                 </div>
