--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -25,7 +25,7 @@
                 <fa-icon [icon]="faEllipsisH" class="option-list-button" id="dropdown" ngbDropdownToggle></fa-icon>
                 
                 <div ngbDropdownMenu aria-labelledby="dropdown" class="dropdown-menu">
-                  <div (click)="editItem(contentEdit,i,idx)"><fa-icon [icon]="faEye"></fa-icon> Open</div>
+                  <div (click)="editItem(contentEdit,i,idx)"><fa-icon [icon]="faEdit"></fa-icon> Edit</div>
                   <div (click)="copyItem(i)"><fa-icon [icon]="faCopy"></fa-icon> Copy</div>
                   <div (click)="removeItem(i)"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
                 </div>
