generic title page

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -2,12 +2,7 @@
   <div class="col-lg-12">
       <div class="col-lg-12 row">
         <div class="col-lg-12">
-          <h5>
-            <fa-icon [icon]="faPlus" class="btn btn-secondary" (click)="openModal(invoiceContent)"></fa-icon>&nbsp;
-            Invoices
-          </h5>
-        </div>
-        <div class="col-lg-12">
+          <button class="btn btn-outline-secondary" (click)="openModal(invoiceContent)"><fa-icon [icon]="faPlus"></fa-icon> Add</button>
           <div class="container-table-items col-lg-12">
             <div class="row new-items table-header">
               <div class="col-lg-1">#</div>
