--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
             <li><fa-icon [icon]="faHome"></fa-icon> Menu</li>
             <li><fa-icon [icon]="faHistory"></fa-icon> History</li>
 
-            <li *ngFor="let m of menu" routerLink="{{m.route}}" routerLinkActive="selected" [ngStyle]="{'color': m.selected ? m.color:''}" (click)="click();m.selected=true">
+            <li *ngFor="let m of menu" routerLink="{{m.route}}" routerLinkActive="selected" [ngStyle]="{'color': m.selected ? m.color:''}" (click)="click(m);m.selected=true">
                 <fa-icon [icon]="m.icon" [ngStyle]="{color: m.color}" width="50px"></fa-icon>
                 {{m.label}}
             </li>
@@ -18,6 +18,12 @@
         </ul>
     </div>
     <div class="col-sm-10 routerContent">
+        <div class="col-lg-12">
+            <h5>
+                <fa-icon [icon]="currentMenu.icon" class="header-icon" [ngStyle]="{'background-color': currentMenu.color}"></fa-icon> 
+                {{currentMenu.label}}
+            </h5>
+        </div>
         <router-outlet></router-outlet>
     </div>
 </div>
