--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -1,14 +1,9 @@
 <div class="col-lg-12 row">
   <div class="col-lg-12">
-    <h5>
-      <fa-icon [icon]="faPlus" class="btn btn-secondary" (click)="openModal(content)"></fa-icon>&nbsp;
-      Profiles
-    </h5>
-  </div>
-  <div class="col-lg-12">
     <!--
     <app-data-table [dataSource]="profiles" [dataColumns]="['firstname','lastname','vat','active','open']"></app-data-table>
     -->
+    <button class="btn btn-outline-secondary" (click)="openModal(content)"><fa-icon [icon]="faPlus"></fa-icon> Add</button>    
     <div class="container-table-items col-lg-12">
         <div class="row new-items table-header">
           <div class="col-lg-4">Firsname</div>
