--- a/src/styles.css
+++ b/src/styles.css
@@ -286,3 +286,18 @@ input{
 .dropdown-menu > div:hover > fa-icon {
     color: #ededed;
 }
+.header-icon {
+    color: #fff;
+    background-color: #ff8484;
+    border-color: #6c757d;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+}
