scroll bar x bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="menu-top"><div class="brand">Invoicer</div></div>
-<div class="row">
+<div class="row col-sm-12">
     <div class="col-sm-2 sidebar">
         <ul>
             <li><fa-icon [icon]="faHome"></fa-icon> Menu</li>
