--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -40,7 +40,7 @@
         </button>
     </div>
     <div class="col-lg-12 row">
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <fieldset>
           <legend>General</legend>
           <div class="col-lg-12"><label>Firsname </label><input type="text" [(ngModel)]="newInvoiceProfile.firstname"></div>
@@ -57,7 +57,7 @@
           </div>
         </fieldset>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <fieldset>
           <legend>Address</legend>
           
@@ -68,19 +68,19 @@
           <div class="col-lg-12"><label>Country </label><input type="text" [(ngModel)]="newInvoiceProfile.address.country"></div>
         </fieldset>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <fieldset>
           <legend>Logo</legend>
           <div class="col-lg-12 row">
-            <div  *ngIf="!newInvoiceProfile.logo" class="col-lg-6">
-              <svg width="100" height="100" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
-                  <text x="14" y="50" fill="#999" style="font-weight: bold">Your logo</text>
+            <div  *ngIf="!newInvoiceProfile.logo" class="col-lg-12">
+              <svg width="100%" height="100%" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
+                  <text x="27%" y="50%" fill="#999" style="font-weight: bold">Your logo</text>
               </svg>
             </div>
-            <div *ngIf="newInvoiceProfile.logo" class="col-lg-6">
+            <div *ngIf="newInvoiceProfile.logo" class="col-lg-12">
               <img *ngIf="newInvoiceProfile.logo" [src]="newInvoiceProfile.logo" width="100%" height="100%"/>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-12">
               <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
               <div *ngIf="loadingLogo" class="progress">
                 <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
@@ -104,7 +104,7 @@
         </button>
     </div>
     <div class="col-lg-12 row">
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <fieldset>
           <legend>General</legend>
   
@@ -123,7 +123,7 @@
 
         </fieldset>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <fieldset>
           <legend>Address</legend>
           
@@ -134,19 +134,19 @@
           <div class="col-lg-12"><label>Country </label><input type="text" [(ngModel)]="currentProfile.address.country"></div>
         </fieldset>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-4">
         <fieldset>
           <legend>Logo</legend>
           <div class="col-lg-12 row">
-            <div *ngIf="!currentProfile.logo" class="col-lg-6">
-              <svg width="100" height="100" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
-                  <text x="14" y="50" fill="#999" style="font-weight: bold">Your logo</text>
+            <div *ngIf="!currentProfile.logo" class="col-lg-12">
+              <svg width="100%" height="100%" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
+                  <text x="27%" y="50%" fill="#999" style="font-weight: bold">Your logo</text>
               </svg>
             </div>
-            <div *ngIf="currentProfile.logo" class="col-lg-6">
+            <div *ngIf="currentProfile.logo" class="col-lg-12">
               <img *ngIf="currentProfile.logo" [src]="currentProfile.logo" width="100%" height="100%"/>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-12">
               <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
               <div *ngIf="loadingLogo" class="progress">
                 <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
