--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -14,9 +14,12 @@
   </div>
   <div *ngFor="let i of invoice.items; let idx = index" class="row add-items table-items">
       <div class="col-lg-2">{{i.project}}</div>
-      <div class="col-lg-3">
+      <div class="col-lg-3" *ngIf="i.period && i.period.from && i.period.to">
         {{i.period.from.day}}/{{i.period.from.month}}/{{i.period.from.year}} -
         {{i.period.to.day}}/{{i.period.to.month}}/{{i.period.to.year}}
+      </div>
+      <div class="col-lg-3 text-danger" *ngIf="!i.period || !i.period.from || !i.period.to">
+        BUG WITH THE DATE. TODO FIX THAT!
       </div>
       <div class="col-lg-2">{{i.nature}}</div>
       <div class="col-lg-2">{{i.days}}</div>
