--- a/src/app/invoice-preview/invoice-preview.component.html
+++ b/src/app/invoice-preview/invoice-preview.component.html
@@ -27,7 +27,8 @@
 <div class="col-lg-12 items">
   <div *ngFor="let i of invoice.items" class="col-lg-12 row">
     <div class="col-lg-3 item">{{i.project}}</div>
-    <div class="col-lg-1 item">{{i.period.from.day}}/{{i.period.from.month}}/{{i.period.from.year}} -> {{i.period.to.day}}/{{i.period.to.month}}/{{i.period.to.year}} </div>
+    <div class="col-lg-1 item" *ngIf="i.period && i.period.from && i.period.to">{{i.period.from.day}}/{{i.period.from.month}}/{{i.period.from.year}} -> {{i.period.to.day}}/{{i.period.to.month}}/{{i.period.to.year}} </div>
+    <div class="col-lg-1 item text-danger" *ngIf="!i.period || !i.period.from || !i.period.to">BUG DATE</div>
     <div class="col-lg-4 item">{{i.nature}}</div>
     <div class="col-lg-1 item">{{i.days}}</div>
     <div class="col-lg-1 item">{{i.rate}}</div>
