--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -47,3 +47,19 @@
 .modal-header {
     margin-bottom: 15px;
 }
+.inv-status {
+    padding: 7px 10px 7px 10px;
+    border-radius: 3px;
+    color: #424242;
+    text-align: center;
+    max-width: 50px;
+}
+.open-status {
+    background-color: #66ff7a;
+}
+.close-status {
+    background-color: #ff7866
+}
+.close-status {
+    background-color: #669cff;
+}
