status for invoice

--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -86,7 +86,7 @@
     <div class="modal-body col-lg-12 row">
       <div class="col-lg-12">
         <label>Project</label>
-        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.project"/>
+        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.project" [readonly]="invoice.status == 2"/>
       </div>
       <div class="col-lg-12">
         <label>Period</label>
@@ -94,22 +94,22 @@
       </div>
       <div class="col-lg-12">
         <label>Natur</label>
-        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.nature"/>
+        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.nature" [readonly]="invoice.status == 2"/>
       </div>
       <div class="col-lg-4">
         <label># Days</label>
-        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.days"/>
+        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.days" [readonly]="invoice.status == 2"/>
       </div>
       <div class="col-lg-4">
         <label>Rate</label>
-        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.rate"/>
+        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.rate"  [readonly]="invoice.status == 2"/>
       </div>
       <div class="col-lg-4">
         <label>Vat Rate</label>
-        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.vatRate"/>
+        <input class="col-lg-12" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.vatRate" [readonly]="invoice.status == 2"/>
       </div>
     </div>
     <div class="modal-footer col-lg-12">
-      <button type="button" class="btn btn-outline-dark" (click)="updateItem()">Save</button>
+      <button type="button" class="btn btn-outline-dark" (click)="updateItem()" *ngIf="invoice.status != 2">Save</button>
     </div>
 </ng-template>
