--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -48,11 +48,13 @@
     margin-bottom: 15px;
 }
 .inv-status {
+    display: inline-block;
     padding: 7px 10px 7px 10px;
     border-radius: 3px;
-    color: #424242;
+    color: #fff;
     text-align: center;
-    max-width: 50px;
+    max-width: 60px;
+    min-width: 60px;
 }
 .open-status {
     background-color: #66ff7a;
@@ -60,6 +62,6 @@
 .close-status {
     background-color: #ff7866
 }
-.close-status {
+.ready-status {
     background-color: #669cff;
 }
