--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -20,7 +20,7 @@
               <div class="col-lg-2" *ngIf="!i.status && i.status != 0"></div>
               <div class="col-lg-2" *ngIf="i.status == 0"><span class="inv-status open-status">open</span></div>              
               <div class="col-lg-2" *ngIf="i.status == 1"><span class="inv-status ready-status">ready</span></div>
-              <div class="col-lg-2" *ngIf="i.status == 2"><span class="inv-status open-status">closed</span></div>
+              <div class="col-lg-2" *ngIf="i.status == 2"><span class="inv-status close-status">closed</span></div>
               <div class="col-lg-1">
                 <div ngbDropdown class="d-inline-block">
                   <fa-icon [icon]="faEllipsisH" class="option-list-button" id="dropdown" ngbDropdownToggle></fa-icon>
