--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,10 @@ html {
     font-size: 12px;
     /*height: 100%;*/
 }
+input[readonly]{
+    background-color: #d4d4d4;
+    cursor: not-allowed;
+}
 .gris {
     color: #888;
 }
