status for invoice

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -29,7 +29,7 @@
                     <div (click)="openInvoice(i)"><fa-icon [icon]="faFolderOpen"></fa-icon> Open</div>
                     <div (click)="openModal(content, i)"><fa-icon [icon]="faEye"></fa-icon> Preview</div>
                     <div (click)="generatePdf(i)"><fa-icon [icon]="faFilePdf"></fa-icon> Download PDF</div>
-                    <div (click)="deleteInvoice(i)"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
+                    <div (click)="deleteInvoice(i)" *ngIf="i.status != 2"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
                   </div>
                 </div>
               </div>
