--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -31,7 +31,7 @@
           <div ngbDropdownMenu aria-labelledby="dropdown" class="dropdown-menu">
             <div (click)="editItem(contentEdit,i,idx)"><fa-icon [icon]="faEdit"></fa-icon> Edit</div>
             <div (click)="copyItem(i)"><fa-icon [icon]="faCopy"></fa-icon> Copy</div>
-            <div (click)="removeItem(idx)"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
+            <div (click)="removeItem(idx)" *ngIf="invoice.status != 2"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
           </div>
         </div>       
       </div>
