--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,18 +1,12 @@
 <div class="col-lg-12">
   <div class="col-lg-12 row">
     <h3>Invoice Setting</h3>
-
-    <div class="col-lg-12">
-      <label for="logo">Change your logo</label>
-      <input id="logo" type="file" style="display: none">
-      <svg width="100" height="100" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="logo">
-          <text x="14" y="50" fill="#999" style="font-weight: bold">Your logo</text>
-      </svg>
+    <div class="col-lg-12" *ngIf="settings">
+      <label for="currentInvoiceNumber">Current invoice number</label>
+      <input  id="currentInvoiceNumber" type="number" [(ngModel)]="settings.currentInvoiceNumber">
     </div>
-
     <div class="col-lg-12">
-      <label for="pdfname">Name for pdf</label>
-      <input id="pdfname" type="text">
+      <button type="button" class="btn btn-outline-dark" (click)="save()">Save</button>
     </div>
   </div>
 
